--- a/package.json
+++ b/package.json
@@ -12,18 +12,23 @@
     "@ckeditor/ckeditor5-react": "^9.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "@tinymce/tinymce-react": "^5.1.1",
+    "@types/react-slick": "^0.23.13",
     "antd": "^5.20.6",
+    "bootstrap": "^5.3.3",
     "ckeditor5": "^43.1.0",
     "ckeditor5-premium-features": "^43.1.0",
     "clsx": "^2.1.1",
     "next": "14.2.7",
     "normalize.css": "^8.0.1",
     "react": "^18",
+    "react-bootstrap": "^2.10.5",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.2",
+    "react-slick": "^0.30.2",
     "sass": "^1.77.8",
+    "slick-carousel": "^1.8.1",
     "tutorial-blog": "file:"
   },
   "devDependencies": {
